--- a/src/component/Navbar/Navbar.scss
+++ b/src/component/Navbar/Navbar.scss
@@ -1,3 +1,10 @@
+.navbarData{
+    position: sticky;
+    top: 0;
+    right: 0;
+    left: 0;
+}
+
 .navbar .navbar-nav .nav-link
 {
     color:#fff;
